# site_bit_loader

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
app/: db.sqlite3  main.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_hellper.py  post.py  profile.py  user.py
app/core/repositories/: post_repository.py  profile_repository.py  user_repository.py
app/core/schemas/: post.py  security.py
app/core/security/: checks.py  dependens.py  file.py  password.py  token.py
app/core/services/: post_service.py  profile_servicr.py  user_service.py
app/core/tasks/: celery.py  tasks.py
app/core/tasks/email/: email.py
app/posts/: __init__.py  crud.py  dependens.py  schemas.py  views.py
app/posts/routers/: admin.py  post.py
app/posts/services/: ipost_service.py  post_service.py
app/posts/utils/: checks.py  converter.py  dependens.py
app/profiles/: __init__.py  crud.py  dependens.py  schemas.py  views.py
app/profiles/routers/: admin.py  me.py
app/profiles/services/: iprofile_service.py  profile_service.py
app/profiles/utils/: checks.py  convert.py  dependens.py  dir.py  schemas.py
app/tasks/: celery.py  send_email.py  tasks.py
app/tasks/email/: email.py
app/templates/: pod_reg.html
app/users/: __init__.py  crud.py  dependens.py  schemas.py  token.py  views.py
app/users/routers/: admin.py  auth.py  me.py  registration.py
app/users/services/: iuser_service.py  user_service.py
app/users/utils/: checks.py  convert.py  dependens.py  password.py  schemas.py  security.py  send_email.py  token.py
frontend/: package-lock.json
frontend/KLoad/: package-lock.json  package.json
frontend/KLoad/src/: 121212App.tsx  App.css  App.tsx  help_start.txt  index.css
frontend/KLoad/src/components/: Header.css  button_handler.css  button_handler.tsx  input_name.tsx  input_password.css  input_password.tsx  (+1 more)
frontend/src/: App.css  App.tsx  Confirm.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Header.css  Header.tsx  button_handler.css  button_handler.tsx  input.css  input.tsx  input_password.css  input_password.tsx
frontend/src/pages/: Confirm.tsx  Login.tsx  Pages.css  Profile.css  Profile.tsx  Register.tsx
frontend/src/routes/: routes.txt
migration/: env.py
migration/versions/: 0dfd7dbb4fc4_initial_revision.py  1c8892d1e02c_user.py  f3b11705d826_initial_migration.py
migrations/: env.py
migrations/versions/: 2025_09_19_1601-db0c17d1e495_init.py  2025_09_19_1603-36ca321497f9_init.py  2025_09_19_1605-ab90208f4d8d_init.py  2025_09_19_1609-7608cc15bcba_post.py  2025_09_19_1638-03e21f8c7376_fix_user.py  2025_09_22_1710-7e92ca76365f_fix_user_2.py  2025_09_22_1732-7a2043d0c836_fix_user_2.py  2025_10_06_1724-d6a0a7e0a74a_add_user_profile_relationship.py  2025_10_06_1725-1871cd2bc456_add_user_profile_relationship.py  2025_10_06_1728-1d18594746f6_add_user_profile_relationship.py  2025_10_10_1354-274e1a71a9c9_name_user.py  2025_10_18_1552-8b1e7ab89a22_initial.py  2025_10_24_1339-12b13ee8ff14_user_active.py  2025_10_26_1508-37b413516cc5_add_refresh_token_in_bd_user.py
tests/: test_api.py
tests/user/: test_api.py
